--- a/css/style.css
+++ b/css/style.css
@@ -1,199 +1,155 @@
 body {
-  margin: 0;
-}
+  margin: 0; }
 
 ul {
-  margin: 0 0 9px 25px;
-  padding: 0;
-}
+  margin-top: auto;
+  margin-bottom: auto; }
 
 .clearfix:before, .nav-pills:before, .clearfix:after, .nav-pills:after {
   display: table;
-  content: " ";
-}
+  content: " "; }
 .clearfix:after, .nav-pills:after {
-  clear: both;
-}
+  clear: both; }
 
 .nav-pills, .nav-stacked {
   margin-left: 0;
-  list-style: none;
-}
-.nav-pills li a, .nav-stacked li a {
-  display: block;
-  text-decoration: none;
-}
+  list-style: none; }
+  .nav-pills li a, .nav-stacked li a {
+    display: block;
+    text-decoration: none; }
 
 .nav-pills > li {
   float: left;
-  margin-right: 5px;
-}
-.nav-pills > li > a {
-  border: none;
-  padding: 6px 12px;
-  color: #222222;
-  font-size: 1.1487em;
-  line-height: 1.2;
-  transition: background 0.15s;
-}
-.nav-pills > li > a .d-icon {
-  margin-right: 5px;
-  opacity: 0.65;
-}
-.nav-pills > li > a:hover {
-  color: #e45735;
-  background-color: #f7cdc2;
-}
-.nav-pills > li.active > a,
-.nav-pills > li > a.active {
-  color: #ffffff;
-  background-color: #e45735;
-}
-.nav-pills > li.active > a .d-icon,
-.nav-pills > li > a.active .d-icon {
-  opacity: 1;
-}
+  margin-right: 5px; }
+  .nav-pills > li > a {
+    border: none;
+    padding: 6px 12px;
+    color: #222222;
+    font-size: 1.1487em;
+    line-height: 1.2;
+    transition: background 0.15s; }
+    .nav-pills > li > a .d-icon {
+      margin-right: 5px;
+      opacity: 0.65; }
+    .nav-pills > li > a:hover {
+      color: #e45735;
+      background-color: #f7cdc2; }
+  .nav-pills > li.active > a,
+  .nav-pills > li > a.active {
+    color: #ffffff;
+    background-color: #e45735; }
+    .nav-pills > li.active > a .d-icon,
+    .nav-pills > li > a.active .d-icon {
+      opacity: 1; }
 
 .nav-stacked {
   padding: 0;
   overflow: hidden;
-  background: #e9e9e9;
-}
-.nav-stacked li {
-  border-bottom: 1px solid #e9e9e9;
-  position: relative;
-}
-.nav-stacked li:last-of-type {
-  border-bottom: 0;
-}
-.nav-stacked li.indent {
-  padding-left: 15px;
-}
-.nav-stacked a {
-  margin: 0;
-  padding: 13px;
-  font-size: 1.1487em;
-  line-height: 1;
-  cursor: pointer;
-  color: #222222;
-}
-.nav-stacked a.active {
-  color: #ffffff;
-  background-color: #e45735;
-}
-.nav-stacked a.active::after {
-  left: 90%;
-  top: 33%;
-  content: " ";
-  position: absolute;
-  border: 8px solid transparent;
-  border-left-color: #ffffff;
-}
-.nav-stacked .count {
-  font-size: 0.8706em;
-}
-.nav-stacked .glyph {
-  font-size: 0.8706em;
-  width: 1.25em;
-  text-align: center;
-  margin-right: 0.5em;
-  line-height: 1.4;
-}
+  background: #e9e9e9; }
+  .nav-stacked li {
+    border-bottom: 1px solid #e9e9e9;
+    position: relative; }
+    .nav-stacked li:last-of-type {
+      border-bottom: 0; }
+    .nav-stacked li.indent {
+      padding-left: 15px; }
+  .nav-stacked a {
+    margin: 0;
+    padding: 13px;
+    font-size: 1.1487em;
+    line-height: 1;
+    cursor: pointer;
+    color: #222222; }
+    .nav-stacked a.active {
+      color: #ffffff;
+      background-color: #e45735; }
+      .nav-stacked a.active::after {
+        left: 90%;
+        top: 33%;
+        content: " ";
+        position: absolute;
+        border: 8px solid transparent;
+        border-left-color: #ffffff; }
+  .nav-stacked .count {
+    font-size: 0.8706em; }
+  .nav-stacked .glyph {
+    font-size: 0.8706em;
+    width: 1.25em;
+    text-align: center;
+    margin-right: 0.5em;
+    line-height: 1.4; }
 
 .wrap {
-  max-width: 1110px;
-}
+  max-width: 1110px; }
 
 .wrap {
   margin-right: auto;
   margin-left: auto;
-  padding: 0 8px;
-}
+  padding: 0 8px; }
 
 .b-header {
   width: 100%;
   background-color: #0088cc;
   height: 48px;
-  margin-bottom: 0;
-}
-.b-header .contents {
-  margin: 8px 0;
-}
-.b-header .title {
-  float: left;
-  margin-right: 24px;
-}
-.b-header .title a {
-  color: #ffffff;
-}
-.b-header .title:visited {
-  color: #ffffff;
-}
-.b-header #brand-logo {
-  max-height: 32px;
-}
-.b-header #brand-text-logo {
-  line-height: 32px;
-  margin: 0;
-}
-.b-header nav.links {
-  float: left;
-}
-.b-header .nav-pills {
-  margin-bottom: 0;
-}
-.b-header .nav-pills > li > a {
-  color: #ffffff;
-  line-height: 22px;
-}
-.b-header .nav-pills > li > a:hover {
-  color: #e45735;
-  background-color: dark-light-diff(#e45735, #0088cc, -70%, 70%);
-}
-.b-header .nav-pills > li > a.active > a, .b-header .nav-pills > li > a > a.active {
-  color: #ffffff;
-  background-color: #e45735;
-}
-.b-header .panel {
-  float: right;
-  position: relative;
-}
-.b-header .menu-panel {
-  position: absolute;
-  top: 100%;
-  right: -10px;
-  z-index: 1001;
-}
-.b-header ul.icons {
-  text-align: center;
-  margin: 0 0 0 5px;
-}
-.b-header ul.icons > li {
-  float: left;
-  list-style: none;
-}
-.b-header ul.icons [class^="fa fa-"] {
-  width: 28px;
-  height: 28px;
-  font-size: 16px;
-  line-height: 28px;
-  display: inline-block;
-  margin: 2px;
-}
-.b-header .panel > ul.icons {
-  float: right;
-}
-.b-header .panel > ul.icons [class^="fa fa-"] {
-  color: #ffffff;
-}
+  margin-bottom: 0; }
+  .b-header .contents {
+    margin: 8px 0; }
+  .b-header .title {
+    float: left;
+    margin-right: 24px; }
+    .b-header .title a {
+      color: #ffffff; }
+    .b-header .title:visited {
+      color: #ffffff; }
+  .b-header #brand-logo {
+    max-height: 32px; }
+  .b-header #brand-text-logo {
+    line-height: 32px;
+    margin: 0; }
+  .b-header nav.links {
+    float: left; }
+  .b-header .nav-pills {
+    margin-bottom: 0; }
+    .b-header .nav-pills > li > a {
+      color: #ffffff;
+      line-height: 22px; }
+      .b-header .nav-pills > li > a:hover {
+        color: #e45735;
+        background-color: dark-light-diff(#e45735, #0088cc, -70%, 70%); }
+      .b-header .nav-pills > li > a.active > a, .b-header .nav-pills > li > a > a.active {
+        color: #ffffff;
+        background-color: #e45735; }
+  .b-header .panel {
+    float: right;
+    position: relative; }
+  .b-header .menu-panel {
+    position: absolute;
+    top: 100%;
+    right: -10px;
+    z-index: 1001; }
+  .b-header ul.icons {
+    text-align: center;
+    margin: 0 0 0 5px; }
+    .b-header ul.icons > li {
+      float: left;
+      list-style: none; }
+    .b-header ul.icons [class^="fa fa-"] {
+      width: 28px;
+      height: 28px;
+      font-size: 16px;
+      line-height: 28px;
+      display: inline-block;
+      margin: 2px; }
+  .b-header .panel > ul.icons {
+    float: right; }
+    .b-header .panel > ul.icons [class^="fa fa-"] {
+      color: #ffffff; }
 
 .d-header {
-  margin-top: 48px;
-}
+  margin-top: 48px; }
 
 .docked .d-header {
-  margin-top: 0;
-}
+  margin-top: 0; }
 
 .b-banner {
   display: none;
@@ -202,119 +158,92 @@ ul {
   position: relative;
   overflow: hidden;
   font-size: 16px;
-  line-height: 150%;
-}
-.b-banner h1 {
-  margin: 30px 0 20px 0;
-}
-.b-banner .description {
-  margin: 0 20%;
-}
-.b-banner.default {
-  text-align: center;
-  background-color: #0088cc;
-  color: #f0faff;
-}
-.b-banner.default img.banner-image {
-  width: 100%;
-  max-width: 100%;
-}
-.b-banner.default .overlay {
-  background-color: #250b05;
-  color: #fef7f5;
-  text-shadow: 1px 1px black;
-  position: absolute;
-  top: 111px;
-  width: 100%;
-  height: 100%;
-  padding: 30px 0;
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s, opacity 0.2s linear;
-}
-.b-banner.default .overlay h1 {
-  color: #e45735;
-}
-.b-banner.default:hover .overlay {
-  visibility: visible;
-  opacity: 0.85;
-}
-.b-banner.smart {
-  background-color: dark-light-diff(#e45735, #ffffff, 70%, -70%);
-}
-.b-banner.smart .banner-image {
-  border: 32px solid #f4bcae;
-  border-radius: 250px;
-  float: left;
-  margin: 15px 30px 10px 10px;
-  position: relative;
-  height: 215px;
-  width: 215px;
-  overflow: hidden;
-}
-.b-banner.smart h1 {
-  color: #e45735;
-  margin-top: 50px;
-}
-.b-banner.smart .banner-links {
-  float: right;
-  width: 30%;
-  margin-left: 30px;
-  font-size: 14px;
-  line-height: 100%;
-}
-.b-banner.smart .banner-links ul {
-  margin: 0 0 0 10px;
-}
-.b-banner.smart .banner-links ul li {
-  margin: 10px 0;
-}
+  line-height: 150%; }
+  .b-banner h1 {
+    margin: 30px 0 20px 0; }
+  .b-banner .description {
+    margin: 0 20%; }
+  .b-banner.default {
+    text-align: center;
+    background-color: #0088cc;
+    color: #f0faff; }
+    .b-banner.default img.banner-image {
+      width: 100%;
+      max-width: 100%; }
+    .b-banner.default .overlay {
+      background-color: #250b05;
+      color: #fef7f5;
+      text-shadow: 1px 1px black;
+      position: absolute;
+      top: 111px;
+      width: 100%;
+      height: 100%;
+      padding: 30px 0;
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 0s, opacity 0.2s linear; }
+      .b-banner.default .overlay h1 {
+        color: #e45735; }
+    .b-banner.default:hover .overlay {
+      visibility: visible;
+      opacity: 0.85; }
+  .b-banner.smart {
+    background-color: dark-light-diff(#e45735, #ffffff, 70%, -70%); }
+    .b-banner.smart .banner-image {
+      border: 32px solid #f4bcae;
+      border-radius: 250px;
+      float: left;
+      margin: 15px 30px 10px 10px;
+      position: relative;
+      height: 215px;
+      width: 215px;
+      overflow: hidden; }
+    .b-banner.smart h1 {
+      color: #e45735;
+      margin-top: 50px; }
+    .b-banner.smart .banner-links {
+      float: right;
+      width: 30%;
+      margin-left: 30px;
+      font-size: 14px;
+      line-height: 100%; }
+      .b-banner.smart .banner-links ul {
+        margin: 0 0 0 10px; }
+        .b-banner.smart .banner-links ul li {
+          margin: 10px 0; }
 
 .navigation-topics .b-banner, .navigation-categories .b-banner {
-  display: block;
-}
+  display: block; }
 
 @media only screen and (max-width: 1000px) {
   .b-banner {
     font-size: 14px;
-    line-height: 125%;
-  }
+    line-height: 125%; }
 
   .b-banner.smart .banner-image {
-    display: none;
-  }
+    display: none; }
 
   .b-banner.smart .banner-image, .b-banner.smart .banner-text {
-    margin-bottom: 10px;
-  }
+    margin-bottom: 10px; }
 
   .b-banner .description {
-    margin: 0;
-  }
+    margin: 0; }
 
   .b-banner.smart .banner-links {
-    width: 35%;
-  }
+    width: 35%; }
 
   .banner-links > div > p:first-child {
-    margin-top: 0;
-  }
+    margin-top: 0; }
 
   .b-banner h1 {
     margin: 0;
-    font-size: 1.4em;
-  }
+    font-size: 1.4em; }
 
   .b-banner.smart h1 {
-    margin: 20px 0;
-  }
+    margin: 20px 0; }
 
   .b-banner.default .overlay {
-    padding: 10px 0;
-  }
-}
+    padding: 10px 0; } }
 @media only screen and (max-width: 480px) {
   .b-banner {
-    display: none !important;
-  }
-}
+    display: none !important; } }
