--- a/scss/style.scss
+++ b/scss/style.scss
@@ -173,6 +173,12 @@ ul {
     padding: 0 8px;
 }
 
+//Content
+.dumpcontent {
+  padding:20px;
+  background-color:$love;
+}
+
 //Brand Theme Header Component
 .b-header {
   width: 100%;
