Added fixed feature

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,8 @@ ul {
   width: 100%;
   background-color: #0088cc;
   font-family: "Montserrat";
-  height: 48px;
+  height: auto;
+  position: fixed;
   margin-bottom: 0; }
   .b-header .contents {
     margin: 8px 0; }
