Idea for title class

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -175,7 +175,7 @@ ul {
 
 //Content
 .dumpcontent {
-  padding:20px;
+  padding: 40px;
   background-color:$love;
 }
 
@@ -194,6 +194,7 @@ ul {
 
   .title {
     float: left;
+    //width: 10%;
     margin-right: 24px;
     a {
       color: $secondary;
